# Heroes

./: .gitignore  CMakeLists.txt  class_diagram.puml  main.cpp
lib/helpers/: ConsoleHelper.h
lib/models/: Hero.h  IMagician.h  IWarrior.h
lib/models/Persian/: Persian.h  PersianMagician.h  PersianWarrior.h
lib/models/Roman/: Roman.h  RomanMagician.h  RomanWarrior.h
